# arches-rule-based-permissions

./: .coveragerc  .gitignore  .pre-commit-config.yaml  MANIFEST.in  manage.py  package-lock.json  package.json  pyproject.toml  vitest.config.mts  vitest.setup.mts
.github/workflows/: main.yml
arches_rule_based_permissions/: admin.py  apps.py  celery.py  hosts.py  models.py  settings.py  wsgi.py
arches_rule_based_permissions/migrations/: 0001_initial.py  0002_add_rule_config.py  0002_remove_ruleconfig_node_remove_ruleconfig_nodegroup.py
arches_rule_based_permissions/permissions/: arches_filtered_permissions.py  rules.py
arches_rule_based_permissions/templates/registration/: password_reset_subject.txt
tests/: test_settings.py
tests/search_indexes/: sample_index_tests.py
